# cpp_plugin_test

./: build.sh
base/: CMakeLists.txt  main.cpp
base/include/: base_encoder.h  json_encoder.h  pprz_data.h
pprzServerSDK/: CMakeLists.txt
pprzServerSDK/include/: Connector.h  Encoder.h  publicTypes.h
pprzServerSDK/src/: Connector.cpp
server/: CMakeLists.txt  main.cpp
simplePlugin/: CMakeLists.txt  simpleConnector.cpp  simpleConnector.h  simpleEncoder.cpp  simpleEncoder.h
