cmake_minimum_required(VERSION 3.13)
project(PprzServerSDK LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(LIBRARY_VERSION_MAJOR 0)
SET(LIBRARY_VERSION_STRING 0.1)

INCLUDE(GNUInstallDirs)

SET(SOURCES_FILES
    src/Connector.cpp
)

SET(HEADERS_FILES
    include/Connector.h    
    include/publicTypes.h
    include/Encoder.h
)

include_directories(include)

add_library(${PROJECT_NAME} SHARED ${SOURCES_FILES})

target_include_directories(
   ${PROJECT_NAME}
   PRIVATE
   PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
          $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)


set_target_properties(${PROJECT_NAME} PROPERTIES
    VERSION		${LIBRARY_VERSION_STRING}
    SOVERSION	${LIBRARY_VERSION_MAJOR}
    PUBLIC_HEADER  "${HEADERS_FILES}"
)

INSTALL (
	TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Config
	LIBRARY# DESTINATION ${CMAKE_INSTALL_LIBDIR}
	PUBLIC_HEADER# DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

INSTALL(
    EXPORT ${PROJECT_NAME}Config
    DESTINATION "${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}"
)
